Add get for reports by id
- Get reports/{id}
- Document post /reports response
